--- a/styles.css
+++ b/styles.css
@@ -335,6 +335,10 @@ button {
     text-align: center;
 }
 
+.contact-heading span {
+    text-decoration: line-through;
+}
+
 .contact-icons {
     font-size: 2.5rem;
     color: black;
